--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,109 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family:  "Fira Sans", sans-serif;
+    font-size: 1em;
+}
+li {
+    list-style: none;
+    /* text-align: left; */
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    align-items: flex-start;
+}
+
+.searchbar {
+    position: relative;
+}
+
+input {
+    all: unset;
+    border-left: 0;
+    border-top: 0;
+    border-right: 0;
+    border-bottom: 1px solid black;
+}
+
+#submit {
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+}
+
 .error {
-    color: red;
+    color: white;
+}
+
+.active {
+    background-color: red;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.weather-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    /* display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr); */
+}
+
+#header-msg {
+    /* grid-column: 1 / 4; */
+    font-size: 1.5em;
+    flex-basis: 100%;
+    text-align: center;
+    padding: 100px 10px;
+}
+
+#detailed-forecast {
+    flex-basis: 100%;
+    display: flex;
+}
+
+#detailed-forecast div {
+    text-align: center;
+}
+
+.grid-item {
+    text-align: center;
+    border: 1px solid grey;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    padding: 6px 16px;
+}
+
+.grid-item:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+@media only screen and (max-width: 600px) {
+    #header-msg {padding: 50px 10px;}
+    .grid-item { width: 60%;}
+    .weather-grid { flex-direction: column; row-gap: 20px; align-items: center;}
+}
+
+/* prevent blue autofill background - solution taken from https://stackoverflow.com/questions/55131944/how-to-remove-blue-background-on-chrome-autocomplete */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !important;
 }
