--- a/src/style.css
+++ b/src/style.css
@@ -99,18 +99,16 @@ input {
 
 #right-arrow,
 #left-arrow {
-    position: absolute;
-    top: 50%;
     width: 32px;
     cursor: pointer;
 }
 
 #right-arrow {
-    right: 33%;
+    order: 2;
 }
 
 #left-arrow {
-    left: 33%;
+    order: 1;
 }
 
 #right-arrow.disabled,
@@ -134,6 +132,7 @@ input {
 
 .hours {
     display: none;
+    order: 2;
 }
 
 .visible {
@@ -146,8 +145,12 @@ input {
 
 @media only screen and (max-width: 650px) {
     #header-msg {padding: 50px 10px;}
-    .grid-item { width: 60%;}
+    .grid-item { width: 60%; display: flex; text-align: left;}
     .weather-grid { flex-direction: column; row-gap: 20px; align-items: center;}
+}
+
+@media only screen and (max-width: 455px) {
+    .grid-item { width: 100%; }
 }
 
 /* prevent blue autofill background - solution taken from https://stackoverflow.com/questions/55131944/how-to-remove-blue-background-on-chrome-autocomplete */
